# rtl-sdr-cellular-network-scanner-python

./: .gitignore  AGENT.md  README.md  pyproject.toml
captures/: live_umts.csv  results_20260720T044748Z.json  results_20260720T045420Z.json  sample.csv
database/: bands.json  operators.json
scripts/: replay.py
src/cellscan/: __init__.py  cli.py
src/cellscan/analysis/: __init__.py  classifier.py  peak_detector.py
src/cellscan/backend/: __init__.py  rtl_power.py  validator.py
src/cellscan/model/: spectrum.py
src/cellscan/output/: __init__.py  json_export.py  terminal.py
src/cellscan/parser/: __init__.py  csv.py
src/cellscan/scheduler/: __init__.py  scheduler.py
src/cellscan/util/: find.py
tests/: test_classifier.py  test_csv_parser.py  test_peak_detector.py
